--- a/Cocktail recipies site/style.css
+++ b/Cocktail recipies site/style.css
@@ -1,176 +1,151 @@
+@import url(https://fonts.googleapis.com/css?family=Ubuntu);
 *{
-	margin: 0;
-	padding: 0;
-}
-body{
-	background: #262626;
-}
-a{
-	text-decoration: none;
-	color: #eee;
-}
-header{
-	width: 100%;
-	height: 92px;
-	background: #000;
-}
-#logo{
-	margin-top: 2px;
-	width: 90px;
-	height: 90px;
-}
-#conteiner{
-	width: 80%;
-	margin: 0 auto;
-}
-nav{
-	display: flex;
-	align-items: center;
-	text-transform: uppercase;
-	font-size: 1.6rem;
-}
-.brand{
-	font-size: 25px;
-	font-weight: 300;
-	color: #fff;
-}
-.brand span{
-	color: #269fb5;
-}
-nav ul{
-	display: flex;
-	 
-}
-nav ul li{
-	list-style: none;
-	margin-left: 40px;
-}
-nav ul li:first-child{
-	margin-left: 70px;
-}
-nav ul li a{
-	position: relative;
-	letter-spacing: 2px;
-}
-nav ul li:last-child{
-	margin-right: 0;
-	padding-right: 0;
-}
 
-nav ul li a::before,
-nav ul li a::after{
-	content: '';
-	position: absolute;
-	width: 100%;
-	height: 2px;
-	background-color: #269fb5;
-	left: 0;
-	transform: scaleX(0);
-	transition: all .5s;
+  margin: 0;
+  padding: 0;
 }
-nav ul li a::before{
-	top: 0;
-	transform-origin: left;
+#nav {
+ text-align: center;
+ background: #000;
+ padding-top: 10px;
+ padding-bottom: 10px;  
 }
-nav ul li a::after{
-	bottom: 0;
-	transform-origin: right;
+#nav li {
+  list-style: none; 
+  display: inline-block; 
 }
-nav ul li a:hover::before,
-nav ul li a:hover::after{
-	transform: scaleX(1);
+#nav .link {
+  color: #fff; 
+  display: block; font-family:arial; 
+  text-transform: uppercase; 
+  font-weight: bold; 
+  font-size: 20px;
+  margin: 6px 15px;
+  padding: 12px 10px 12px;
+  padding-top: 0px;
+
+  text-decoration: none; 
 }
-.box{
-    position: relative;
- 	text-align: center;
-  	color: white;
-    }
-#picture{
-	width: 100%;
-	height: 200px;
-	margin-top: 2px;
+#image{
+width: 282px;
+height: 100px;
 }
-.box div{
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  text-shadow: 5px -1px 3px #000;
+:root {
+  --mainColor: rgb(32, 110, 234, 0.5);
+}
+.link {
+  background:
+     linear-gradient(
+       to top,
+       var(--mainColor) 0%,
+       var(--mainColor) 5px,
+       transparent 5px
+     );
+    background-repeat: repeat-x;
+    background-size: 100%;
+  color: #000;
+  padding-left: 10px;
+  text-decoration: none;
+}
+.link:hover {
+  background:
+     linear-gradient(
+       to top,
+       var(--mainColor) 0%,
+       var(--mainColor) 5px,
+       transparent
+     );
+}
+p{
+  margin-right: 35px;
+  padding-top: 35px;
+  color: #fff;
+  text-align: right;
   font-size: 23px;
-
+  font-style: italic;
 }
-.box h2{
-	position: absolute;
-	  top: 18%;
-	  left: 50%;
-	  transform: translate(-50%, -50%);
-	  text-shadow: 5px -1px 3px #000;
-	  font-size: 30px;
+#first-word{
+  text-transform: uppercase;
+  font-size: 30px;
+  font-weight: bold;;
+  color: rgb(255, 255, 255, 0.4);
+  letter-spacing: 3px;
 }
-/*.box h2, .box p{
-	position: relative;
-    color: #fff;
-    text-shadow: 5px -1px 3px #000;
-    text-align: center;
-    }*/
-/*p{
-    top: 25%;
-  	font-size: 20px;
-    }*/
-h2{
-   	top: 6%;
-   	font-size: 32px;
-   	letter-spacing: 4px;
-    }
-    main:after{
-	clear: both;
-	display: block;
-	content: '';
+#box{
+  margin-top: 8px;
+  background: url(1.jpg);
+  background-repeat: no-repeat;
+  height: 250px;
+  background-size: cover;
 }
-iframe{
-	width: 100%;
-	height: 300px;
+h1{
+  text-align: center;
+    color: #000;
+    border-bottom: 3px solid #000;
+    line-height: 3px;
+    font-size: 30px;
+    margin: 20px 0;
 }
-#coctails-section{
-	width: 100%;
-	float: left;
-}
-#coctails-section article{
-	float: left;
-	margin-left: 20px;
-	margin-right: 10px;
-}
-h3{
-   text-align: center; 
-   color: #fff;
-   border-bottom: 2px solid #fff; 
-   line-height: 3px;
-   font-size: 25px;
-   margin: 20px 0;
-}
-h3 span { 
-    background:#262626; 
+#header{ 
+    background:#fff; 
+    font-style: italic;
     padding:0 10px; 
 }
-.coctails-img{
-	width: 265px;
-	height: 265px;
+.image{
+  display:inline-block;
+  margin:30px;
+  transition: all 0.8s;
 }
-figcaption{
-	position: relative;
-	top: -33px;
-	width: 265px;
-	font-size: 25px;
-	text-align: center;
-	background: rgb(0, 0, 0, 0.8);
-	color: #fff;
-}
-#main-footer{
-	background-color: #000;
-	padding: 40px;
-}
-#main-footer p{
-	color: #fff;
+figure{
+  float: left;
+  padding-top: 25px;
+  padding-right: 45px;
 }
 
+.last-fig
+{
+  padding-right: 0px;
+}
+figure:hover{
+transform:scale(1.1);
+}
+
+figure:hover figcaption{
+opacity: 1;
+transition: opacity 0.2s;  
+}
+figure{
+  font-family:'Ubuntu';
+  font-size:20px;
+  color:#282828;
+  margin:0;
+  margin-bottom:30px;
+}
+
+img{
+  width: 250px;
+  height:250px;
+  box-shadow: 0px 0px 20px 0px black;
+}
+figcaption{
+  opacity: 0;
+  text-align:center;
+}
+span{
+  font-style:italic;
+  font-size:20px;
+}
+a{
+  text-decoration:none;
+  color:#52618d;
+}
+#main-footer{
+  background: #000;
+  font-family: Cambria;
+  padding: 30px;
+}
+#main-footer p{
+  color: #fff;
+  padding: 30px;
+}
 
